manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-svc
  namespace: dev
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
